use boxed primitive cache
git-svn-id: https://svn.apache.org/repos/asf/jakarta/bcel/trunk@1149467 13f79535-47bb-0310-9956-ffa450edef68