@@ -78,7 +78,7 @@ public class BIPUSH extends Instruction implements ConstantPushInstruction {
 
 
     public Number getValue() {
-        return new Integer(b);
+        return Integer.valueOf(b);
     }
 
 
