@@ -76,7 +76,7 @@ public class SIPUSH extends Instruction implements ConstantPushInstruction {
 
 
     public Number getValue() {
-        return new Integer(b);
+        return Integer.valueOf(b);
     }
 
 
